fix main div overflow

--- a/app/assets/stylesheets/v2/common.less
+++ b/app/assets/stylesheets/v2/common.less
@@ -118,3 +118,7 @@ body {
     margin-top: 10% !important;
   }
 }
+
+#main {
+  overflow: hidden;
+}
